Support --add-exports